# marukov

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: chain.rs  lib.rs  text.rs  vocab.rs
