[package]
name = "marukov"
description = "a simple markov chain text generator"
homepage = "https://github.com/xjunko/marukov"
repository = "https://github.com/xjunko/marukov"
readme = "README.md"
license = "MIT"
authors = ["xjunko <phony@kafu.ovh>"]
version = "0.2.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
regex = "1.11.2"
unidecode = "0.3.0"
